<resources>
    <string name="app_name">Layout</string>
    <string name="constraint_layout">constraint_layout</string>
    <string name="layout_button2">frame_layout</string>
    <string name="layout_button3">button3</string>
    <string name="button1">button_back</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button5">button5</string>
    <string name="button6">button6</string>
    <string name="button7">button7</string>
    <string name="button8">button8</string>
    <string name="button9">button9</string>
    <string name="button10">button10</string>
    <string name="android_practice">Android practice</string>
    <string name="hello">Hello!</string>
    <string name="button_constrain_1">Signup</string>
    <string name="button_constrain_2">Login</string>
</resources>